# nexttrack

./: .gitignore
backend/: pyproject.toml
backend/scripts/: prototype.py  prototype_fixture.py
backend/src/nexttrack/: __init__.py  api.py  config.py  models.py
backend/src/nexttrack/lastfm/: client.py
backend/src/nexttrack/pipeline/: aggregate.py  rank.py
backend/tests/: test_aggregate.py  test_api.py  test_client.py  test_models.py  test_pipeline.py  test_rank.py
backend/tests/fixtures/: get_similar__death_cab_for_cutie__title_and_registration.json  get_similar__dr._dog__shadow_people.json  get_similar__radiohead__pyramid_song.json  get_top_tags__death_cab_for_cutie__title_and_registration.json  get_top_tags__dr._dog__shadow_people.json  get_top_tags__radiohead__pyramid_song.json
