[project]
name = "nexttrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vineet Erasala", email = "erasalav@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.39.0",
]

[project.scripts]
nexttrack = "nexttrack:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "respx>=0.23.1",
    "ruff>=0.15.18",
]
